Adding scss variables and mixins into project + implementing root variables in App.vue

--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -1,7 +1,8 @@
-@mixin flexBase($justify, $align, $direction, $mobileDirection) {
+@mixin flexBase($justify, $align, $gap, $direction, $mobileDirection) {
     display: flex;
     justify-content: $justify;
     align-items: $align;
+    gap: $gap;
     flex-direction: $direction;
 
     @media (max-width: 480px) {
